src/test/wacc/valid/pairs/pairarray.wacc
# ensures that pairs can be unpacked directly from arrays

# Output:
# 3
#

# Program:

begin
  pair(int, int) p = newpair(5, 6);
  pair(int, int)[] a = [p, p];
  fst a[0] = 3 ;
  int x = fst a[1] ;
  println x
end
